--- a/ReadingList/UI/ArticleList/ArticleList.storyboard
+++ b/ReadingList/UI/ArticleList/ArticleList.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="X9c-FY-E8r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="20O-iJ-Uib">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -10,7 +10,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Item-->
+        <!--Article ListVC-->
         <scene sceneID="cQK-FU-cSd">
             <objects>
                 <viewController storyboardIdentifier="ArticleList" id="20O-iJ-Uib" customClass="ArticleListVC" customModule="ReadingList" customModuleProvider="target" sceneMemberID="viewController">
@@ -19,7 +19,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="qAj-9B-5Tb">
-                                <rect key="frame" x="0.0" y="40" width="375" height="578"/>
+                                <rect key="frame" x="0.0" y="20" width="375" height="598"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="ezI-c1-nce">
                                     <size key="itemSize" width="50" height="50"/>
@@ -43,12 +43,13 @@
                         <constraints>
                             <constraint firstItem="kF5-9n-8un" firstAttribute="bottom" secondItem="qAj-9B-5Tb" secondAttribute="bottom" id="S8h-hg-P8M"/>
                             <constraint firstItem="qAj-9B-5Tb" firstAttribute="leading" secondItem="kF5-9n-8un" secondAttribute="leading" id="ekN-j9-fmt"/>
-                            <constraint firstItem="qAj-9B-5Tb" firstAttribute="top" secondItem="kF5-9n-8un" secondAttribute="top" constant="20" id="jOB-9N-Ao4"/>
+                            <constraint firstItem="qAj-9B-5Tb" firstAttribute="top" secondItem="kF5-9n-8un" secondAttribute="top" id="jOB-9N-Ao4"/>
                             <constraint firstItem="qAj-9B-5Tb" firstAttribute="trailing" secondItem="kF5-9n-8un" secondAttribute="trailing" id="zMV-8a-mLs"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="kF5-9n-8un"/>
                     </view>
-                    <tabBarItem key="tabBarItem" title="Item" id="Nda-FX-Md2"/>
+                    <tabBarItem key="tabBarItem" systemItem="more" id="1HZ-UD-lx2"/>
+                    <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
                     <connections>
                         <outlet property="collectionView" destination="qAj-9B-5Tb" id="4ar-Pb-NLS"/>
                         <outlet property="flowLayout" destination="ezI-c1-nce" id="09A-Zy-vXf"/>
@@ -56,24 +57,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="PoB-ez-upB" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1104.8" y="180.35982008995504"/>
-        </scene>
-        <!--Tab Bar Controller-->
-        <scene sceneID="UQ2-xa-5Rj">
-            <objects>
-                <tabBarController automaticallyAdjustsScrollViewInsets="NO" id="X9c-FY-E8r" sceneMemberID="viewController">
-                    <toolbarItems/>
-                    <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="D2w-Qj-h1x">
-                        <autoresizingMask key="autoresizingMask"/>
-                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                    </tabBar>
-                    <connections>
-                        <segue destination="20O-iJ-Uib" kind="relationship" relationship="viewControllers" id="AXr-f9-3HE"/>
-                    </connections>
-                </tabBarController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="8Zv-RM-HXU" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="165.59999999999999" y="180.35982008995504"/>
+            <point key="canvasLocation" x="889" y="180"/>
         </scene>
     </scenes>
 </document>
