--- a/ReadingList/UI/ReadingList/Component/ListItemCell.xib
+++ b/ReadingList/UI/ReadingList/Component/ListItemCell.xib
@@ -1,44 +1,49 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="149" id="KGk-i7-Jjw" customClass="ListItemCell" customModule="ReadingList" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="410" height="149"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="148" id="KGk-i7-Jjw" customClass="ListItemCell" customModule="ReadingList" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="418" height="148"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="410" height="148.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="418" height="147.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="bhh-v4-sx0">
-                        <rect key="frame" x="5" y="5" width="400" height="138.5"/>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="bhh-v4-sx0" customClass="DesignableView" customModule="ReadingList" customModuleProvider="target">
+                        <rect key="frame" x="10" y="10" width="398" height="127.5"/>
                         <subviews>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="jUF-d5-gfk">
-                                <rect key="frame" x="270" y="21.5" width="120" height="96"/>
+                                <rect key="frame" x="268.5" y="16" width="119.5" height="95.5"/>
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="jUF-d5-gfk" secondAttribute="height" multiplier="5:4" id="RZn-8P-4s4"/>
                                 </constraints>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                        <real key="value" value="8"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
                             </imageView>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="cBC-jM-K6u">
-                                <rect key="frame" x="10" y="10" width="250" height="118.5"/>
+                                <rect key="frame" x="10" y="10" width="248.5" height="107.5"/>
                                 <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="title" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PHH-um-eOz">
-                                        <rect key="frame" x="0.0" y="0.0" width="250" height="95"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="no title" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PHH-um-eOz">
+                                        <rect key="frame" x="0.0" y="0.0" width="248.5" height="86"/>
                                         <fontDescription key="fontDescription" name="HiraginoSans-W6" family="Hiragino Sans" pointSize="17"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="2000/00/00" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Kh3-Dl-UDG">
-                                        <rect key="frame" x="0.0" y="95" width="250" height="23.5"/>
+                                        <rect key="frame" x="0.0" y="86" width="248.5" height="21.5"/>
                                         <fontDescription key="fontDescription" name="HiraginoSans-W6" family="Hiragino Sans" pointSize="17"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
@@ -49,7 +54,7 @@
                                 </constraints>
                             </stackView>
                         </subviews>
-                        <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="cBC-jM-K6u" firstAttribute="top" secondItem="bhh-v4-sx0" secondAttribute="top" constant="10" id="3ca-HF-Umh"/>
                             <constraint firstItem="jUF-d5-gfk" firstAttribute="leading" secondItem="cBC-jM-K6u" secondAttribute="trailing" constant="10" id="6Sw-FS-h8R"/>
@@ -59,13 +64,30 @@
                             <constraint firstItem="cBC-jM-K6u" firstAttribute="leading" secondItem="bhh-v4-sx0" secondAttribute="leading" constant="10" id="Zif-50-b3I"/>
                             <constraint firstAttribute="bottom" secondItem="cBC-jM-K6u" secondAttribute="bottom" constant="10" id="gTO-Gd-MIh"/>
                         </constraints>
+                        <userDefinedRuntimeAttributes>
+                            <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                <real key="value" value="12"/>
+                            </userDefinedRuntimeAttribute>
+                            <userDefinedRuntimeAttribute type="number" keyPath="shadowOpacity">
+                                <real key="value" value="0.5"/>
+                            </userDefinedRuntimeAttribute>
+                            <userDefinedRuntimeAttribute type="size" keyPath="shadowOffset">
+                                <size key="value" width="3" height="3"/>
+                            </userDefinedRuntimeAttribute>
+                            <userDefinedRuntimeAttribute type="number" keyPath="shadowRadius">
+                                <real key="value" value="4"/>
+                            </userDefinedRuntimeAttribute>
+                            <userDefinedRuntimeAttribute type="color" keyPath="shadowColor">
+                                <color key="value" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            </userDefinedRuntimeAttribute>
+                        </userDefinedRuntimeAttributes>
                     </view>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="bhh-v4-sx0" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="5" id="F6h-dj-iQb"/>
-                    <constraint firstAttribute="trailing" secondItem="bhh-v4-sx0" secondAttribute="trailing" constant="5" id="FJ8-JQ-N1Z"/>
-                    <constraint firstAttribute="bottom" secondItem="bhh-v4-sx0" secondAttribute="bottom" constant="5" id="Hju-ZJ-3N0"/>
-                    <constraint firstItem="bhh-v4-sx0" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="5" id="VVH-oP-56G"/>
+                    <constraint firstItem="bhh-v4-sx0" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="10" id="F6h-dj-iQb"/>
+                    <constraint firstAttribute="trailing" secondItem="bhh-v4-sx0" secondAttribute="trailing" constant="10" id="FJ8-JQ-N1Z"/>
+                    <constraint firstAttribute="bottom" secondItem="bhh-v4-sx0" secondAttribute="bottom" constant="10" id="Hju-ZJ-3N0"/>
+                    <constraint firstItem="bhh-v4-sx0" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="10" id="VVH-oP-56G"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
@@ -74,7 +96,7 @@
                 <outlet property="dateLbl" destination="Kh3-Dl-UDG" id="rAI-Lp-ZIy"/>
                 <outlet property="titleLbl" destination="PHH-um-eOz" id="gQv-8o-49X"/>
             </connections>
-            <point key="canvasLocation" x="25.600000000000001" y="102.09895052473765"/>
+            <point key="canvasLocation" x="32" y="102.54872563718142"/>
         </tableViewCell>
     </objects>
 </document>
