アイテムオプションビュー作成

--- a/ReadingList/UI/ReadingList/ReadingList/ReadingList.storyboard
+++ b/ReadingList/UI/ReadingList/ReadingList/ReadingList.storyboard
@@ -62,11 +62,20 @@
                     <connections>
                         <outlet property="buttonBarView" destination="TQG-yy-gNr" id="xMO-9P-GqG"/>
                         <outlet property="containerView" destination="B4O-yk-wZy" id="of8-uf-Whv"/>
+                        <segue destination="2Kr-nv-djt" kind="custom" identifier="ItemOption" customClass="SwiftMessagesBottomTabSegue" customModule="ReadingList" customModuleProvider="target" id="U1Y-YO-o4c"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="COK-kX-EQ2" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="115.94202898550725" y="122.54464285714285"/>
+        </scene>
+        <!--ItemOption-->
+        <scene sceneID="Oxs-I5-MQ6">
+            <objects>
+                <viewControllerPlaceholder storyboardName="ItemOption" id="2Kr-nv-djt" sceneMemberID="viewController"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Mmr-fR-o3G" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="720" y="123"/>
         </scene>
     </scenes>
 </document>
