--- a/ReadingList/UI/ReadingList/ReadingListTable/Component/ListItemCell.xib
+++ b/ReadingList/UI/ReadingList/ReadingListTable/Component/ListItemCell.xib
@@ -53,15 +53,28 @@
                                     <constraint firstItem="PHH-um-eOz" firstAttribute="height" secondItem="cBC-jM-K6u" secondAttribute="height" multiplier="0.8" id="d5v-BD-yJt"/>
                                 </constraints>
                             </stackView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="g0Y-Sh-Wkl">
+                                <rect key="frame" x="328" y="0.0" width="70" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="5iU-W9-dpR"/>
+                                    <constraint firstAttribute="width" constant="70" id="zp1-Bn-tne"/>
+                                </constraints>
+                                <state key="normal" title="Button"/>
+                                <connections>
+                                    <action selector="tapOptionButton:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="39N-WP-hGr"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="cBC-jM-K6u" firstAttribute="top" secondItem="bhh-v4-sx0" secondAttribute="top" constant="10" id="3ca-HF-Umh"/>
                             <constraint firstItem="jUF-d5-gfk" firstAttribute="leading" secondItem="cBC-jM-K6u" secondAttribute="trailing" constant="10" id="6Sw-FS-h8R"/>
                             <constraint firstItem="jUF-d5-gfk" firstAttribute="width" secondItem="bhh-v4-sx0" secondAttribute="width" multiplier="0.3" id="J1a-ru-JiI"/>
+                            <constraint firstItem="g0Y-Sh-Wkl" firstAttribute="top" secondItem="bhh-v4-sx0" secondAttribute="top" id="JdX-lN-tB8"/>
                             <constraint firstAttribute="trailing" secondItem="jUF-d5-gfk" secondAttribute="trailing" constant="10" id="LH0-gv-OXS"/>
                             <constraint firstItem="jUF-d5-gfk" firstAttribute="centerY" secondItem="bhh-v4-sx0" secondAttribute="centerY" id="VR3-3b-HgS"/>
                             <constraint firstItem="cBC-jM-K6u" firstAttribute="leading" secondItem="bhh-v4-sx0" secondAttribute="leading" constant="10" id="Zif-50-b3I"/>
+                            <constraint firstAttribute="trailing" secondItem="g0Y-Sh-Wkl" secondAttribute="trailing" id="dRJ-GF-Mp3"/>
                             <constraint firstAttribute="bottom" secondItem="cBC-jM-K6u" secondAttribute="bottom" constant="10" id="gTO-Gd-MIh"/>
                         </constraints>
                         <userDefinedRuntimeAttributes>
