--- a/ReadingList/UI/ReadingList/ReadingList/ReadingList.storyboard
+++ b/ReadingList/UI/ReadingList/ReadingList/ReadingList.storyboard
@@ -62,20 +62,29 @@
                     <connections>
                         <outlet property="buttonBarView" destination="TQG-yy-gNr" id="xMO-9P-GqG"/>
                         <outlet property="containerView" destination="B4O-yk-wZy" id="of8-uf-Whv"/>
-                        <segue destination="2Kr-nv-djt" kind="custom" identifier="ItemOption" customClass="SwiftMessagesBottomTabSegue" customModule="ReadingList" customModuleProvider="target" id="U1Y-YO-o4c"/>
+                        <segue destination="2Kr-nv-djt" kind="custom" identifier="ReadingItemOption" customClass="SwiftMessagesBottomTabSegue" customModule="ReadingList" customModuleProvider="target" id="U1Y-YO-o4c"/>
+                        <segue destination="q47-11-D7X" kind="custom" identifier="FinishedItemOption" customClass="SwiftMessagesBottomTabSegue" customModule="ReadingList" customModuleProvider="target" id="e5P-Md-GUW"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="COK-kX-EQ2" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="115.94202898550725" y="122.54464285714285"/>
         </scene>
-        <!--ItemOption-->
+        <!--ReadingItemOption-->
         <scene sceneID="Oxs-I5-MQ6">
             <objects>
-                <viewControllerPlaceholder storyboardName="ItemOption" id="2Kr-nv-djt" sceneMemberID="viewController"/>
+                <viewControllerPlaceholder storyboardName="ReadingItemOption" id="2Kr-nv-djt" sceneMemberID="viewController"/>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Mmr-fR-o3G" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="720" y="123"/>
+        </scene>
+        <!--FinishedItemOption-->
+        <scene sceneID="ZiI-N3-odP">
+            <objects>
+                <viewControllerPlaceholder storyboardName="FinishedItemOption" id="q47-11-D7X" sceneMemberID="viewController"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Sgd-ac-P3m" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="721" y="167"/>
         </scene>
     </scenes>
 </document>
