noImage追加、ロジック実装

--- a/ReadingList/UI/ArticleList/Component/ArticleItemCollectionViewCell.xib
+++ b/ReadingList/UI/ArticleList/Component/ArticleItemCollectionViewCell.xib
@@ -21,6 +21,7 @@
                 <subviews>
                     <imageView contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="FpT-QS-rxC">
                         <rect key="frame" x="0.0" y="0.0" width="239" height="300"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <userDefinedRuntimeAttributes>
                             <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
                                 <real key="value" value="5"/>
